I changed the pom so that during the integration-test phase the OnlineTest-annotated classes are NOT run. I did this because we don't want jenkins running integration tests constantly. Manually running the full integration tests are done this way: mvn clean integration-test -P run-integration-tests