@@ -106,6 +106,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- for deploying to Maven Central -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -114,6 +115,7 @@
 					<autoversionsubmodules>true</autoversionsubmodules>
 				</configuration>
 			</plugin>
+			<!-- normally don't run the test classes annotated with @OnlineTest -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -126,9 +128,6 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<includes>
-						<include>**/*.class</include>
-					</includes>
 					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
 				</configuration>
 			</plugin>
@@ -143,18 +142,13 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<groups>com.xeiam.xchange.OnlineTest</groups>
+					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
 				</configuration>
 				<executions>
 					<execution>
 						<goals>
 							<goal>integration-test</goal>
 						</goals>
-						<configuration>
-							<includes>
-								<include>**/*.class</include>
-							</includes>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -241,13 +235,52 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.4</version>
+						<version>${version.maven-surefire-plugin}</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>surefire-junit47</artifactId>
+								<version>${version.maven-surefire-plugin}</version>
+							</dependency>
+						</dependencies>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
 								<phase>verify</phase>
 								<goals>
 									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<!-- use: mvn clean integration-test -P run-integration-tests -->
+		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
+		<profile>
+			<id>run-integration-tests</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.9</version>
+						<configuration>
+							<skip>false</skip>
+							<!-- <skipTests>false</skipTests> -->
+							<useFile>false</useFile>
+							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+						</configuration>
+						<executions>
+							<execution>
+								<id>integration-tests</id>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>test</goal>
 								</goals>
 							</execution>
 						</executions>
